# iOS-App

./: .gitmodules  CMakeLists.txt
.github/workflows/: swift.yml
LoyaltyApp/: AsyncImage.swift  ContentView.swift  ForgotPassword.swift  HexColor.swift  JavaBeans.swift  LoginFlow.swift  LoginView.swift  LoyaltyApp.swift  LoyaltyAppApp.swift  MainView.swift  Onboarding.swift  Package.swift  RegisterView.swift  SplashScreenView.swift
LoyaltyApp.xcodeproj/: project.pbxproj
LoyaltyApp.xcodeproj/xcshareddata/xcschemes/: LoyaltyApp.xcscheme
LoyaltyApp.xcodeproj/xcuserdata/justin.xcuserdatad/xcdebugger/: Breakpoints_v2.xcbkptlist
LoyaltyApp.xcodeproj/xcuserdata/justin.xcuserdatad/xcschemes/: xcschememanagement.plist
LoyaltyApp/Assets.xcassets/Banner.imageset/: Contents.json
LoyaltyApp/Assets.xcassets/Image.imageset/: Contents.json
LoyaltyApp/Tests/LoyaltyAppTests/: LoyaltyAppTests.swift
LoyaltyAppTests/: LoyaltyAppTests.swift
LoyaltyAppUITests/: LoyaltyAppUITests.swift  LoyaltyAppUITestsLaunchTests.swift
